--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,86 @@
     @apply max-w-full size-full block object-cover hover:scale-110 transition-all duration-300;
   }
 }
+
+.slider {
+  position: relative;
+}
+.track-slider,
+.range-slider,
+.slider-left-val,
+.slider-right-value {
+  position: absolute;
+}
+
+.track-slider,
+.range-slider {
+  border-radius: 4px;
+  height: 3px;
+}
+
+.track-slider {
+  width: 100%;
+  z-index: 1;
+}
+
+.range-slider {
+  z-index: 2;
+}
+
+.slider-left-value {
+  left: 6px;
+}
+
+.slider-right-value {
+  right: -4px;
+}
+
+.thumb,
+.thumb::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.thumb {
+  pointer-events: none;
+  position: absolute;
+  height: 0;
+  outline: none;
+}
+
+.thumb-left {
+  z-index: 3;
+}
+
+.thumb-right {
+  z-index: 4;
+}
+
+.thumb::-webkit-slider-thumb {
+  background-color: #fff;
+  border-radius: 50%;
+  border: 2px solid #000;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin-top: 3px;
+  pointer-events: all;
+  position: relative;
+  transition: transform 0.3s ease-in-out;
+}
+
+.thumb::-webkit-slider-thumb:hover {
+  transform: scale(1.2);
+}
+
+.thumb::-moz-range-thumb {
+  background-color: #0a0a0a;
+  border-radius: 50%;
+  border: 4px solid #000;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin-top: 4.5px;
+  pointer-events: all;
+  position: relative;
+}
